--- a/index.ipynb
+++ b/index.ipynb
@@ -31,23 +31,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-40ab9465c30f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-40ab9465c30f>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    Ha - time to rent the car > 60 sec\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# State you null and alternative hypotheses\n",
+    "Ha - time to rent the car > 60 sec\n",
+    "Ho - tiem to rent the car <= 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import scipy.stats as stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.0, 0.0013498980316301035)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Your solution here\n",
+    "import math\n",
+    "import scipy.stats as stats\n",
     "\n",
+    "mu = 60\n",
+    "sigma = 30\n",
+    "n =36\n",
+    "x_bar = 75\n",
     "\n",
-    "# (p = 0.0013498980316301035, z = 3.0)"
+    "z_score = (x_bar - mu)/(sigma/math.sqrt(n))\n",
+    "p_value = 1-stats.norm.cdf(z_score)\n",
+    "# (p = 0.0013498980316301035, z = 3.0)\n",
+    "\n",
+    "z_score, p_value"
    ]
   },
   {
@@ -57,7 +98,8 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "\n",
+    "#p value is less alpha 0.05. we can reject the null hypothesis and say that the time customers spend to rent a car is significanlly more than 60 sec..\n"
    ]
   },
   {
@@ -89,19 +131,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "#Ha - 25 students average SAT score is significantly higher then population\n",
+    "#Ho - 25 stuents average SAT score is less than or equal to population average score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.03593031911292577, 1.8)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Give your solution here \n",
+    "import numpy as np\n",
     "\n",
+    "x = np.array([434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454,\n",
+    "514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531])\n",
+    "x_bar = x.mean()\n",
+    "n = len(x)\n",
+    "mu = 500\n",
+    "sigma = 100\n",
+    "z = (x_bar - mu)/(sigma/math.sqrt(n))\n",
+    "p = 1- stats.norm.cdf(z)\n",
     "\n",
-    "\n",
+    "p,z\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
   },
@@ -111,7 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "3 training helps students "
    ]
   },
   {
@@ -133,9 +198,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -147,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
